# WirelessIMU

./: README.md  collect_data.py  pyproject.toml
WirelessIMU/: platformio.ini
WirelessIMU/src/: main.cpp
