[tool.poetry]
name = "dsplab-api"
version = "0.1.0"
description = ""
authors = ["Chengzong Li <chengzongli.ee10@nycu.edu.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
